--- a/src/components/AppInfoTag/AppInfoTag.scss
+++ b/src/components/AppInfoTag/AppInfoTag.scss
@@ -36,7 +36,7 @@
     background-color: color($theme-color-secondary-light);
   }
 
-  &__prod {
+  &__production {
     @extend .environ;
     background-color: color($theme-color-secondary-light);
   }
