--- a/src/pages/Kpi/KpiSeriesContentWithLoading.scss
+++ b/src/pages/Kpi/KpiSeriesContentWithLoading.scss
@@ -20,6 +20,14 @@
     }
   }
 
+  &__kpi-chart {
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 24px;
+    .chart-with-total {
+      border: none;
+    }
+  }
+
   @include breakpoint-below(tablet) {
     &__flex-chart {
       flex-direction: column;
