--- a/src/components/Chart/ChartWithTitleAndTotal.scss
+++ b/src/components/Chart/ChartWithTitleAndTotal.scss
@@ -2,8 +2,6 @@
 @import "../../styles/mixins";
 
 .chart-with-total {
-  //display: flex;
-  //flex-direction: row;
   padding: $default-panel-padding-x;
   border: 1px solid #ccc;
   border-radius: 2px;
@@ -22,7 +20,7 @@
 
   &__chart-container {
     width: 100%;
-    max-height: 300px;
+    height: 400px;
   }
 
   @include breakpoint-below(tablet) {
