--- a/src/pages/DocumentSpace/DocumentSpacePage.scss
+++ b/src/pages/DocumentSpace/DocumentSpacePage.scss
@@ -19,13 +19,34 @@
       max-height: inherit;
     }
 
+    svg {
+      vertical-align: top;
+    }
+
     button {
       margin-left: calculateRem(10px);
       max-height: inherit;
+      margin-top: 0.5rem;
     }
   }
 
   button {
     max-height: inherit;
   }
+}
+
+.breadcrumb-area {
+  flex-direction: row;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin: 0.5rem;
+}
+
+.content-controls {
+  display: flex;
+}
+
+.icon-color {
+  color:#fff !important;
 }
