[TRONAPI-795] Fix style for popup window.

--- a/src/components/DocumentRowActionCellRenderer/DocumentRowActionCellRenderer.scss
+++ b/src/components/DocumentRowActionCellRenderer/DocumentRowActionCellRenderer.scss
@@ -11,7 +11,7 @@
     .popup {
       padding: 10px 0;
     }
-    .popup:before {
+    &.popup:before {
       display: none;
     }
     .popper {
