--- a/src/components/BreadCrumbTrail/BreadCrumbTrail.scss
+++ b/src/components/BreadCrumbTrail/BreadCrumbTrail.scss
@@ -4,6 +4,10 @@
   width: 100%;
   height: 40px;
   justify-content: flex-start;
+
+  &--root-only {
+    margin-left: 0.5rem;
+  }
 }
 
 .breadcrumb-bar-link {
