[TRONAPI-815] Support left nav collapse.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
 @import "styles/base";
 @import "~uswds/dist/scss/elements/form-controls/all";
 @import "~uswds/dist/scss/components/forms";
+
+body {
+  position: relative;
+  overflow: hidden;
+}
