--- a/src/components/PageFormat/PageFormat.scss
+++ b/src/components/PageFormat/PageFormat.scss
@@ -6,9 +6,13 @@
   &__nav-menu {
     flex: 0 0 220px;
     background: #1C3E6B;
-    min-height: 100vh;
+    //min-height: 100vh;
     position: sticky;
-
+    transition: flex 100ms ease-in-out;
+    //.mobile & {
+    //  min-height: 100%;
+    //  height: calc(100vh - 80px);
+    //}
     &-il2 {
       background: #0A4638;
     }
@@ -30,6 +34,19 @@
         right: 0px;
       }
     }
+    &--collapsed {
+      flex: 0 0 60px;
+      overflow: hidden;
+
+      .sidebar {
+        &__logo-section {
+          visibility: hidden;
+        }
+      }
+      .nav-menu__user-info {
+        display: none;
+      }
+    }
   }
   &__page-body-container {
     flex: 1;
@@ -38,9 +55,13 @@
   }
 
   &__page-body {
-    height: 100vh;
+    //height: 100vh;
     display: flex;
     flex-direction: column;
+    //.mobile & {
+    //  min-height: 100%;
+    //  height: calc(100vh - 80px);
+    //}
   }
   .page-body {
     &__title-section {
