--- a/src/components/DocumentRowActionCellRenderer/DocumentRowActionCellRenderer.scss
+++ b/src/components/DocumentRowActionCellRenderer/DocumentRowActionCellRenderer.scss
@@ -7,26 +7,26 @@
     text-align: center;
     cursor: pointer;
   }
-  &__popper {
-    .popup {
-      padding: 10px 0;
+}
+
+.popup {
+  &:before {
+    display: none;
+  }
+  padding: 10px 0;
+}
+
+.popper {
+  &__item {
+    padding: .5rem 1rem;
+    &:hover {
+      background-color: $highlight-color-confirm;
+      cursor: pointer;
     }
-    &.popup:before {
-      display: none;
-    }
-    .popper {
-      &__item {
-        padding: .5rem 1rem;
-        &:hover {
-          background-color: $highlight-color-confirm;
-          cursor: pointer;
-        }
-      }
-      &__title {
-        padding-left: .70rem;
-        position: relative;
-        top: 1px;
-      }
-    }
+  }
+  &__title {
+    padding-left: .70rem;
+    position: relative;
+    top: 1px;
   }
 }
