--- a/src/pages/DocumentSpace/Memberships/DocumentSpaceMemberships.scss
+++ b/src/pages/DocumentSpace/Memberships/DocumentSpaceMemberships.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/mixins";
+@import "../../../styles/colors";
 
 .document-space-members {
   &__header {
@@ -31,5 +32,5 @@
   padding: 4px 4px 4px 4px;
   border: 1px solid #E5E5E5;
   border-radius: 4;
-  margin-right: 14 ;
+  margin-right: 14px;
 }
