--- a/src/components/TabBar/TabBar.scss
+++ b/src/components/TabBar/TabBar.scss
@@ -20,7 +20,7 @@
   padding: 0;
   height: 3.125rem;
   user-select: none;
-  border-bottom: 3px solid $theme-color-primary;
+  border-bottom: 3px solid white;
 }
 
 .tabs ul {
@@ -76,5 +76,5 @@
 }
 
 .tabs .tab {
-  border-bottom: 3px solid $theme-color-primary;
+  border-bottom: 3px solid white;
 }
