--- a/src/pages/DocumentSpace/DocumentSpacePage.scss
+++ b/src/pages/DocumentSpace/DocumentSpacePage.scss
@@ -38,10 +38,8 @@
 .breadcrumb-area {
   flex-direction: row;
   display: flex;
-  width: 100%;
   justify-content: space-between;
-  margin: 0.5rem;
-  align-content: center;
+  margin: 0.5rem 0;
   align-items: center;
 }
 
@@ -51,7 +49,9 @@
   align-content: center;
   justify-content: center;
   align-items: center;
-  margin-right: 0.75rem;
+  & > .usa-button:last-of-type {
+    margin-right: 0;
+  }
 }
 
 // overrides the icon color for
