fix for scss gripe in sq

--- a/src/pages/DocumentSpace/DocumentSpaceMySettings.scss
+++ b/src/pages/DocumentSpace/DocumentSpaceMySettings.scss
@@ -1,5 +1,5 @@
 .my-settings-header {
-  width: calc(100%-48px);
+  width: calc(100% - 48px);
   display: flex;
   color: #515B68;
   border-bottom: 1px solid #E5E5E5;
@@ -21,7 +21,7 @@
 }
 
 .my-settings-body {
-  width: calc(100%-48px);
+  width: calc(100% - 48px);
   margin-left: 32px;
   margin-right: 16px;
 
