[TRONAPI-902] - UI for cut/copy/paste operations

--- a/src/pages/DocumentSpace/DocumentSpacePage.scss
+++ b/src/pages/DocumentSpace/DocumentSpacePage.scss
@@ -1,5 +1,10 @@
 @import "../../styles/mixins";
 
+.clipboard-notification {
+  display: flex;
+  justify-content: center;
+}
+
 .document-space-page {
   &__space-select {
     label {
