[TRONAPI-952] - doc space search and tests refactor

--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -1,6 +1,10 @@
 @import "../../styles/base";
 @import "~uswds/dist/scss/components/accordions";
 
+.usa-accordion__content {
+  overflow: hidden;
+}
+
 .accordion {
   &__item {
     margin-bottom: 1rem;
