--- a/src/pages/DocumentSpace/DocumentSpacePage.scss
+++ b/src/pages/DocumentSpace/DocumentSpacePage.scss
@@ -76,3 +76,8 @@
 .icon-color {
   color:#fff !important;
 }
+
+.docspace-search-button {
+  margin-top: 0.5rem !important;
+  margin-left: 0.5rem !important;
+}
